<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nestedScrollViewEdit"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/linearEditLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textEditLayoutEmail"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="100dp"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textEditEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/email">

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>
        //---- Password
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textLayoutPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"

            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textEditPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword">

            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/appCompatTextBtn"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:stateListAnimator="@anim/button_animation"
            android:text="@string/text_user_update"
            android:layout_gravity="center"
            android:layout_marginTop="40dp">

        </android.support.v7.widget.AppCompatButton>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/appCompatTextEditUser"
            android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:textSize="16dp"
            android:text="@string/text_backToProfile"
            android:textColor="@color/color_login"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:clickable="true"
            >

        </android.support.v7.widget.AppCompatTextView>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>